--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@sanity/vision": "^3.49.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sanity": "^3.49.0",
     "styled-components": "^6.1.15"
   }
